--- a/src/style.css
+++ b/src/style.css
@@ -4,5 +4,40 @@ body {
 
 .todo-create {
   width: 100%;
-  height: 400px;
+}
+
+.add-task {
+  color: #fff;
+  background-color: darkcyan;
+}
+
+button, input[type="submit"] {
+  outline: none;
+  border: none;
+  width: 150px;
+  height: 40px;
+  border-radius: 10px;
+  color: #fff;
+  background-color: darkmagenta;
+}
+
+form {
+  display: flex;
+  flex-flow: column wrap;
+  width: 50%;
+  height: 500px;
+  justify-content: space-around;
+  margin: auto
+}
+
+form > * {
+  margin-bottom: 7px;
+}
+
+form input:not(.border) {
+  display: block;
+  border-color: none;
+  outline: none;
+  border-style: none;
+  border-bottom: 1px solid gray;
 }
