[Feature] Added displayTasks function and view

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,20 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.list-item {
+
+    display:flex;
+}
+
+.list-item > * {
+
+    flex:1;
+    display:flex;
+    justify-content: space-evenly;
+}
+
+
+
 .mouse-cursor-gradient span {
   position: relative;
 }
