--- a/src/style.css
+++ b/src/style.css
@@ -75,9 +75,9 @@ form {
   display: flex;
   flex-flow: column wrap;
   width: 50%;
-  height: 500px;
+  height: 550px;
   justify-content: space-around;
-  margin: auto
+  margin: 20px auto;
 }
 
 form>* {
@@ -90,4 +90,13 @@ form input:not(.border) {
   outline: none;
   border-style: none;
   border-bottom: 1px solid gray;
+}
+
+.choose-project {
+  border: 1px solid rgb(241, 36, 53);
+  border-radius: 10px;
+  padding: 10px 5px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 19px;
 }
