--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,36 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.top-sect {
+  display: flex;
+  background-color: purple;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 10px;
+  align-items: center;
+  border-radius: 20px;
+  max-width: 1100px;
+  min-width: 300px;
+  margin: 40px auto 20px auto;
+}
+
+.top-sect > h3 {
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+  height: 70px;
+  width: 60%;
+  color: #fff;
+  background-color: rebeccapurple;
+}
+
+.blob {
+  width: 100px;
+  height: 100px;
+  background: radial-gradient(ellipse at center, #fea04f 0%, #f99a00 31%, #fe1605 100%);
+  animation: animate_blob_1 30s cubic-bezier(0.75, 0.82, 0.165, 1) infinite;
+}
+
 .list-item>* {
   flex: 1;
   display: flex;
@@ -63,6 +93,8 @@ body {
   cursor: pointer;
   color: #fff;
   overflow: hidden;
+  margin: 10px auto;
+  display: block;
 }
 
 .mouse-cursor-gradient:hover, input[type="submit"]:hover {
@@ -92,6 +124,8 @@ input[type="checkbox"] {
   background-color: #fff;
   border-radius: 15px;
   padding: 0;
+  transform: translateY(-200px);
+  transition: transform 0.4s;
 }
 
 .form>h1 {
@@ -103,12 +137,12 @@ input[type="checkbox"] {
   text-align: center;
 }
 
-/* .translate {
-
-} */
+.translate {
+  transform: translateY(0px);
+}
 
 .modal {
-  display: none;
+  visibility: hidden;
   z-index: 5;
   position: fixed;
   left: 0;
@@ -191,14 +225,6 @@ input[type="checkbox"] {
   transform-style: preserve-3d;
 }
 
-.blob {
-  width: 150px;
-  height: 180px;
-  background: radial-gradient(ellipse at center, #fea04f 0%, #f99a00 31%, #fe1605 100%);
-  animation: animate_blob_1 30s cubic-bezier(0.75, 0.82, 0.165, 1) infinite;
-  ;
-}
-
 @keyframes animate_blob_1 {
   0% {
     border-radius: 51% 49% 19% 81% / 51% 74% 26% 49%;
@@ -231,6 +257,23 @@ input[type="checkbox"] {
 }
 
 .icon {
-  width: 10px;
-  height: 20px;
+  margin-right: 15px;
+  width: 35px;
+  height: 45px;
+  cursor: pointer;
+}
+
+.priority  {
+  width: 40px;
+  height: 40px;
+}
+
+.date-wrap {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.date-wrap > p {
+  flex-grow: 2;
 }
