[Feature] Create accordion for project grouping

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.container {
+  padding: 0 20px;
+}
+
 .top-sect {
   display: flex;
   background-color: purple;
